[package]
name = "cnctd_xcode"
version = "0.1.1"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "Xcode methods"
license = "MIT"
repository = "https://github.com/Connected-Dot/cnctd_xcode"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
colored = "2.1.0"
